fixed win line alignment

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ td {
   transition: stroke-dashoffset 0.425s cubic-bezier(0.4,0,0.2,1);
   -webkit-transition: stroke-dashoffset 0.425s cubic-bezier(0.4,0,0.2,1);
   stroke-opacity: 0.5;
-  stroke-width: 2.6;
+  stroke-width: 3.2;
   stroke-dasharray: 200;
   stroke-dashoffset: 200;
 }
